Split email verification from initial password
fix #46

- allow new registration with own password
- separate email verification from password mails
